Fix the relationship between nsHTMLEditor::CreateDOMFragmentFromPaste and nsHTMLEditor::InsertHTMLWithContexet to avoid duplicate calculations. bug 333063, r=neil sr=jst